@@ -1,3 +1,9 @@
+Wed Apr 25 03:56:18 BST 2007  Olly Betts <olly@survex.com>
+
+	* common/omqueryinternal.h,languages/generate-allsnowballheaders.in,
+	  matcher/msetcmp.h,queryparser/queryparser_internal.h: Add missing
+	  multiple inclusion guards.
+
 Wed Apr 25 03:12:50 BST 2007  Olly Betts <olly@survex.com>
 
 	* queryparser/queryparser_internal.h: Don't include <config.h> in
